poc/tests/errors/test_FplVariableAlreadyDeclared_class_02.fpl
Test.Namespace
{
    theory
    {
        class Nat: obj
        {
            x: Nat

            Nat(x, y: Int)
            {
                self := x
            }
        }
    }
}

##############################

FplVariableAlreadyDeclared:9:17: The name 'x' was already declared in the current context at (7,13)